fix spacing on home

--- a/GCWeb/css/ip.css
+++ b/GCWeb/css/ip.css
@@ -70,8 +70,8 @@ aside.feature .pstn-tp-xs {background:#fff; padding:4px;}
 .featured {
 	margin-top:1em;
   margin-bottom: 0em;
-	padding-top:25px;
-  padding-bottom:25px;
+	padding-top:20px;
+  padding-bottom:20px;
 	color:#fff;
 	background: #141414;
 	opacity:.8;
