--- a/GCWeb/css/theme.css
+++ b/GCWeb/css/theme.css
@@ -13451,7 +13451,7 @@ aside.features .thumbnail img {
 .home .home-banner .innerbox,
 .home .home-banner.sky .innerbox {
     background-color: #26374a;
-    margin: 3em 0;
+    margin: 2em 0;
     padding: 20px;
     width: 50%
 }
